--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="zh">
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -7,11 +7,15 @@
 <meta property="og:title" content="菜头云 - 简单的前端部署">
 <meta name="description" content="菜头云是一个简单的帮助开发者快速迭代和部署前端静态网站的服务">
 <meta property="og:description" content="菜头云是一个简单的帮助开发者快速迭代和部署前端静态网站的服务">
+    <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
-<body><h1>
+<body>
+<main class="markdown-body">
+<h1>
 <a id="user-content-菜头云" class="anchor" href="#%E8%8F%9C%E5%A4%B4%E4%BA%91" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>菜头云</h1>
 <p>菜头云 (<a href="https://caitouyun.com" rel="nofollow">https://caitouyun.com</a>) 是一个简单的帮助开发者快速迭代和部署前端静态网站的服务</p>
 <ul>
+<li><a href="https://github.com/caitouyun/docs/edit/master/README.md">编辑文档请点击</a></li>
 <li><a href="https://github.com/caitouyun/docs/issues">如果在使用中遇到问题请前往提交 issue</a></li>
 <li><a href="https://github.com/caitouyun/docs/discussions">相关功能讨论请点击前往讨论区</a></li>
 </ul>
@@ -160,5 +164,7 @@
 <p>如果需要其他的步骤，比如<code>npm install</code>也可以在部署之前添加，更多配置可以查看 <a href="https://docs.github.com/actions">Github Action 官方文档</a> 或在讨论区中询问</p>
 <h2>
 <a id="user-content-常见问题-faq" class="anchor" href="#%E5%B8%B8%E8%A7%81%E9%97%AE%E9%A2%98-faq" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>常见问题 FAQ</h2>
+
+</main>
 </body>
 </html>
