--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,7 @@
 <a id="user-content-菜头云" class="anchor" href="#%E8%8F%9C%E5%A4%B4%E4%BA%91" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>菜头云</h1>
 <p>菜头云 (<a href="https://caitouyun.com" rel="nofollow">https://caitouyun.com</a>) 是一个简单的帮助开发者快速迭代和部署前端静态网站的服务</p>
 <ul>
+<li><a href="mailto:contact@swiftcarrot.com">通过邮箱直接联系我们</a></li>
 <li><a href="https://github.com/caitouyun/docs/edit/master/README.md">编辑文档请点击</a></li>
 <li><a href="https://github.com/caitouyun/docs/issues">如果在使用中遇到问题请前往提交 issue</a></li>
 <li><a href="https://github.com/caitouyun/docs/discussions">相关功能讨论请点击前往讨论区</a></li>
@@ -38,7 +39,17 @@
 <li><a href="#github-actions">Github Actions</a></li>
 </ul>
 </li>
-<li><a href="#%E5%B8%B8%E8%A7%81%E9%97%AE%E9%A2%98-faq">常见问题 FAQ</a></li>
+<li>
+<a href="#%E5%B8%B8%E8%A7%81%E9%97%AE%E9%A2%98-faq">常见问题 FAQ</a>
+<ul>
+<li><a href="#%E6%88%91%E9%9C%80%E8%A6%81%E4%BB%98%E8%B4%B9%E5%90%97%E6%9C%89%E4%BB%80%E4%B9%88%E9%99%90%E5%88%B6">我需要付费吗？有什么限制?</a></li>
+<li><a href="#%E6%9C%89%E6%B2%A1%E6%9C%89%E7%BD%91%E9%A1%B5%E6%8E%A7%E5%88%B6%E9%9D%A2%E6%9D%BF%E5%8F%AF%E4%BB%A5%E6%9F%A5%E7%9C%8B%E9%83%A8%E7%BD%B2%E8%AE%B0%E5%BD%95">有没有网页控制面板可以查看部署记录</a></li>
+<li><a href="#%E6%9C%89%E6%B2%A1%E6%9C%89%E5%9B%A2%E9%98%9F%E5%8A%9F%E8%83%BD">有没有团队功能</a></li>
+<li><a href="#%E8%83%BD%E4%B8%8D%E8%83%BD%E8%87%AA%E5%AE%9A%E4%B9%89-ssl-%E8%AF%81%E4%B9%A6">能不能自定义 SSL 证书</a></li>
+<li><a href="#cdn-%E4%BD%BF%E7%94%A8">CDN 使用</a></li>
+<li><a href="#%E5%A6%82%E4%BD%95%E6%94%AF%E6%8C%81%E4%B8%8D%E5%B8%A6%E5%AD%90%E5%9F%9F%E5%90%8D%E7%9A%84%E8%87%AA%E5%AE%9A%E4%B9%89%E5%9F%9F%E5%90%8D-apex-domain">如何支持不带子域名的自定义域名 (Apex Domain)?</a></li>
+</ul>
+</li>
 </ul>
 <h2>
 <a id="user-content-安装" class="anchor" href="#%E5%AE%89%E8%A3%85" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>安装</h2>
@@ -164,6 +175,24 @@
 <p>如果需要其他的步骤，比如<code>npm install</code>也可以在部署之前添加，更多配置可以查看 <a href="https://docs.github.com/actions">Github Action 官方文档</a> 或在讨论区中询问</p>
 <h2>
 <a id="user-content-常见问题-faq" class="anchor" href="#%E5%B8%B8%E8%A7%81%E9%97%AE%E9%A2%98-faq" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>常见问题 FAQ</h2>
+<h3>
+<a id="user-content-我需要付费吗有什么限制" class="anchor" href="#%E6%88%91%E9%9C%80%E8%A6%81%E4%BB%98%E8%B4%B9%E5%90%97%E6%9C%89%E4%BB%80%E4%B9%88%E9%99%90%E5%88%B6" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>我需要付费吗？有什么限制?</h3>
+<p>我们目前正在测试中</p>
+<h3>
+<a id="user-content-有没有网页控制面板可以查看部署记录" class="anchor" href="#%E6%9C%89%E6%B2%A1%E6%9C%89%E7%BD%91%E9%A1%B5%E6%8E%A7%E5%88%B6%E9%9D%A2%E6%9D%BF%E5%8F%AF%E4%BB%A5%E6%9F%A5%E7%9C%8B%E9%83%A8%E7%BD%B2%E8%AE%B0%E5%BD%95" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>有没有网页控制面板可以查看部署记录</h3>
+<p>网页版 <a href="https://app.caitouyun.com" rel="nofollow">https://app.caitouyun.com</a> 正在测试中，我们会尽快开始邀请</p>
+<h3>
+<a id="user-content-有没有团队功能" class="anchor" href="#%E6%9C%89%E6%B2%A1%E6%9C%89%E5%9B%A2%E9%98%9F%E5%8A%9F%E8%83%BD" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>有没有团队功能</h3>
+<p>请联系我们</p>
+<h3>
+<a id="user-content-能不能自定义-ssl-证书" class="anchor" href="#%E8%83%BD%E4%B8%8D%E8%83%BD%E8%87%AA%E5%AE%9A%E4%B9%89-ssl-%E8%AF%81%E4%B9%A6" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>能不能自定义 SSL 证书</h3>
+<p>目前没有，请联系我们</p>
+<h3>
+<a id="user-content-cdn-使用" class="anchor" href="#cdn-%E4%BD%BF%E7%94%A8" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>CDN 使用</h3>
+<p>现在依旧可以通过我们的子域名对接到 CDN，我们之后会自动进行 CDN 的集成</p>
+<h3>
+<a id="user-content-如何支持不带子域名的自定义域名-apex-domain" class="anchor" href="#%E5%A6%82%E4%BD%95%E6%94%AF%E6%8C%81%E4%B8%8D%E5%B8%A6%E5%AD%90%E5%9F%9F%E5%90%8D%E7%9A%84%E8%87%AA%E5%AE%9A%E4%B9%89%E5%9F%9F%E5%90%8D-apex-domain" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>如何支持不带子域名的自定义域名 (Apex Domain)?</h3>
+<p>目前我们没有提供这方面的验证功能，但是可以联系我们帮助添加</p>
 
 </main>
 </body>
