--- a/public/index.html
+++ b/public/index.html
@@ -52,18 +52,20 @@
 </li>
 </ul>
 <h2>
-<a id="user-content-安装" class="anchor" href="#%E5%AE%89%E8%A3%85" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>安装</h2>
+<a id="user-content-安装命令行工具" class="anchor" href="#%E5%AE%89%E8%A3%85%E5%91%BD%E4%BB%A4%E8%A1%8C%E5%B7%A5%E5%85%B7" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>安装命令行工具</h2>
+<p>在终端中运行以下命令安装</p>
 <div class="highlight highlight-source-shell"><pre>curl -sf https://cli.caitouyun.com/install.sh <span class="pl-k">|</span> sh</pre></div>
+<p>安装成功后运行 <code>caitou version</code> 会显示当前的运行版本，表明安装成功</p>
 <h2>
-<a id="user-content-账号登录" class="anchor" href="#%E8%B4%A6%E5%8F%B7%E7%99%BB%E5%BD%95" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>账号登录</h2>
-<p>使用菜头云部署需要一个注册账号, 运行</p>
+<a id="user-content-命令行登录" class="anchor" href="#%E5%91%BD%E4%BB%A4%E8%A1%8C%E7%99%BB%E5%BD%95" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>命令行登录</h2>
+<p>使用菜头云部署需要一个账号，运行</p>
 <div class="highlight highlight-source-shell"><pre>caitou login</pre></div>
-<p>浏览器中会打开一个网页链接，如果没有登录网页版可以先使用 Github 账号登录 (目前只支持 Github 账号登录)，在注册或者登录成功后会返回一个授权页面，点击确认之后可以窗口会自动关闭，同时终端会显示 <code>登录成功</code></p>
+<p>浏览器中会打开一个网页链接，如果没有登录可以先使用 Github 账号登录 (目前暂时只支持 Github 账号登录)，在注册或者登录成功后会返回一个授权页面，点击确认之后可以窗口会自动关闭，同时终端会显示 <code>登录成功</code></p>
 <p>登录成功之后可以使用</p>
 <div class="highlight highlight-source-shell"><pre>caitou whoami</pre></div>
-<p>如果成功输出了个人的账号信息则表示在终端已经登录成功</p>
+<p>如果成功输出了个人的账号信息则表示命令行已经登录成功</p>
 <h2>
-<a id="user-content-部署" class="anchor" href="#%E9%83%A8%E7%BD%B2" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>部署</h2>
+<a id="user-content-网站部署" class="anchor" href="#%E7%BD%91%E7%AB%99%E9%83%A8%E7%BD%B2" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>网站部署</h2>
 <h3>
 <a id="user-content-网站名" class="anchor" href="#%E7%BD%91%E7%AB%99%E5%90%8D" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>网站名</h3>
 <ul>
