--- a/public/index.html
+++ b/public/index.html
@@ -70,8 +70,7 @@
 <a id="user-content-网站名" class="anchor" href="#%E7%BD%91%E7%AB%99%E5%90%8D" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>网站名</h3>
 <ul>
 <li>每个菜头云网站都有唯一的网站名</li>
-<li>网站名只能包括数字和字母以及<code>-</code>
-</li>
+<li>网站名只能包括数字和小写字母</li>
 <li>网站在部署的时候会自动创建，如果是别人已经使用的网站名会返回部署失败</li>
 <li>比如 demo 这个网站的生产环境将自动部署到以下子域名
 <ul>
@@ -195,7 +194,22 @@
 <h3>
 <a id="user-content-如何支持不带子域名的自定义域名-apex-domain" class="anchor" href="#%E5%A6%82%E4%BD%95%E6%94%AF%E6%8C%81%E4%B8%8D%E5%B8%A6%E5%AD%90%E5%9F%9F%E5%90%8D%E7%9A%84%E8%87%AA%E5%AE%9A%E4%B9%89%E5%9F%9F%E5%90%8D-apex-domain" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>如何支持不带子域名的自定义域名 (Apex Domain)?</h3>
 <p>目前我们没有提供这方面的验证功能，但是可以联系我们帮助添加</p>
+<h3>
+<a id="user-content-菜头云和-github-pages-有什么区别" class="anchor" href="#%E8%8F%9C%E5%A4%B4%E4%BA%91%E5%92%8C-github-pages-%E6%9C%89%E4%BB%80%E4%B9%88%E5%8C%BA%E5%88%AB" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>菜头云和 Github pages 有什么区别</h3>
+<ul>
+<li>菜头云支持多次部署多次预览的功能</li>
+<li>Github pages 免费用户只能使用公开 repo， 菜头云并不需要一个 git repo</li>
+<li>菜头云提供了大陆和海外两个镜像，并且提供了 <code>rewrites</code> 等高级配置功能</li>
+</ul>
 
 </main>
+<footer class="markdown-body">Copyright © 2021. 使用菜头云托管.
+        <a href="https://beian.miit.gov.cn"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
+              粤ICP备20013360号-1
+            </a>
+      </footer>
 </body>
 </html>
