--- a/public/index.html
+++ b/public/index.html
@@ -23,10 +23,12 @@
 <h2>
 <a id="user-content-目录" class="anchor" href="#%E7%9B%AE%E5%BD%95" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>目录</h2>
 <ul>
-<li><a href="#%E5%AE%89%E8%A3%85">安装</a></li>
-<li><a href="#%E8%B4%A6%E5%8F%B7%E7%99%BB%E5%BD%95">账号登录</a></li>
 <li>
-<a href="#%E9%83%A8%E7%BD%B2">部署</a>
+<a href="#%E5%AE%89%E8%A3%85%E5%91%BD%E4%BB%A4%E8%A1%8C%E5%B7%A5%E5%85%B7">安装命令行工具</a>
+<ul>
+<li><a href="#%E5%91%BD%E4%BB%A4%E8%A1%8C%E7%99%BB%E5%BD%95">命令行登录</a></li>
+<li>
+<a href="#%E7%BD%91%E7%AB%99%E9%83%A8%E7%BD%B2">网站部署</a>
 <ul>
 <li><a href="#%E7%BD%91%E7%AB%99%E5%90%8D">网站名</a></li>
 <li><a href="#%E9%A2%84%E8%A7%88%E7%8E%AF%E5%A2%83">预览环境</a></li>
@@ -48,6 +50,9 @@
 <li><a href="#%E8%83%BD%E4%B8%8D%E8%83%BD%E8%87%AA%E5%AE%9A%E4%B9%89-ssl-%E8%AF%81%E4%B9%A6">能不能自定义 SSL 证书</a></li>
 <li><a href="#cdn-%E4%BD%BF%E7%94%A8">CDN 使用</a></li>
 <li><a href="#%E5%A6%82%E4%BD%95%E6%94%AF%E6%8C%81%E4%B8%8D%E5%B8%A6%E5%AD%90%E5%9F%9F%E5%90%8D%E7%9A%84%E8%87%AA%E5%AE%9A%E4%B9%89%E5%9F%9F%E5%90%8D-apex-domain">如何支持不带子域名的自定义域名 (Apex Domain)?</a></li>
+<li><a href="#%E8%8F%9C%E5%A4%B4%E4%BA%91%E5%92%8C-github-pages-%E6%9C%89%E4%BB%80%E4%B9%88%E5%8C%BA%E5%88%AB">菜头云和 Github pages 有什么区别</a></li>
+</ul>
+</li>
 </ul>
 </li>
 </ul>
