--- a/public/index.html
+++ b/public/index.html
@@ -235,25 +235,25 @@
 <h2>
 <a id="user-content-常见问题-faq" class="anchor" href="#%E5%B8%B8%E8%A7%81%E9%97%AE%E9%A2%98-faq" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>常见问题 FAQ</h2>
 <h3>
-<a id="user-content-我需要付费吗有什么限制" class="anchor" href="#%E6%88%91%E9%9C%80%E8%A6%81%E4%BB%98%E8%B4%B9%E5%90%97%E6%9C%89%E4%BB%80%E4%B9%88%E9%99%90%E5%88%B6" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>我需要付费吗？有什么限制?</h3>
+<a id="user-content-我需要付费吗" class="anchor" href="#%E6%88%91%E9%9C%80%E8%A6%81%E4%BB%98%E8%B4%B9%E5%90%97" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>我需要付费吗？</h3>
 <p>我们目前正在测试中，所有的功能都是免费的</p>
 <h3>
-<a id="user-content-有没有网页控制面板可以查看网站列表和部署记录" class="anchor" href="#%E6%9C%89%E6%B2%A1%E6%9C%89%E7%BD%91%E9%A1%B5%E6%8E%A7%E5%88%B6%E9%9D%A2%E6%9D%BF%E5%8F%AF%E4%BB%A5%E6%9F%A5%E7%9C%8B%E7%BD%91%E7%AB%99%E5%88%97%E8%A1%A8%E5%92%8C%E9%83%A8%E7%BD%B2%E8%AE%B0%E5%BD%95" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>有没有网页控制面板可以查看网站列表和部署记录</h3>
+<a id="user-content-有没有网页控制面板可以查看网站列表和部署记录" class="anchor" href="#%E6%9C%89%E6%B2%A1%E6%9C%89%E7%BD%91%E9%A1%B5%E6%8E%A7%E5%88%B6%E9%9D%A2%E6%9D%BF%E5%8F%AF%E4%BB%A5%E6%9F%A5%E7%9C%8B%E7%BD%91%E7%AB%99%E5%88%97%E8%A1%A8%E5%92%8C%E9%83%A8%E7%BD%B2%E8%AE%B0%E5%BD%95" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>有没有网页控制面板可以查看网站列表和部署记录?</h3>
 <p>网页版 <a href="https://app.caitouyun.com" rel="nofollow">https://app.caitouyun.com</a> 正在测试中，我们会尽快开放给用户使用</p>
 <h3>
-<a id="user-content-有没有团队功能" class="anchor" href="#%E6%9C%89%E6%B2%A1%E6%9C%89%E5%9B%A2%E9%98%9F%E5%8A%9F%E8%83%BD" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>有没有团队功能</h3>
+<a id="user-content-有没有团队功能" class="anchor" href="#%E6%9C%89%E6%B2%A1%E6%9C%89%E5%9B%A2%E9%98%9F%E5%8A%9F%E8%83%BD" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>有没有团队功能?</h3>
 <p>和网页控制面板一起会尽快对外开放</p>
 <h3>
-<a id="user-content-能不能自定义-ssl-证书" class="anchor" href="#%E8%83%BD%E4%B8%8D%E8%83%BD%E8%87%AA%E5%AE%9A%E4%B9%89-ssl-%E8%AF%81%E4%B9%A6" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>能不能自定义 SSL 证书</h3>
+<a id="user-content-能不能自定义-ssl-证书" class="anchor" href="#%E8%83%BD%E4%B8%8D%E8%83%BD%E8%87%AA%E5%AE%9A%E4%B9%89-ssl-%E8%AF%81%E4%B9%A6" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>能不能自定义 SSL 证书?</h3>
 <p>目前命令行没有提供这样的功能，但是可以<a href="mailto:contact@swiftcarrot.com">联系我们</a></p>
 <h3>
-<a id="user-content-我的网站有没有-cdn-加速" class="anchor" href="#%E6%88%91%E7%9A%84%E7%BD%91%E7%AB%99%E6%9C%89%E6%B2%A1%E6%9C%89-cdn-%E5%8A%A0%E9%80%9F" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>我的网站有没有 CDN 加速</h3>
-<p>目前没有 CDN 加速集成，但是依旧可以通过我们的子域名对接到 CDN，我们之后会添加 CDN 的自动集成</p>
+<a id="user-content-网站有没有-cdn-加速" class="anchor" href="#%E7%BD%91%E7%AB%99%E6%9C%89%E6%B2%A1%E6%9C%89-cdn-%E5%8A%A0%E9%80%9F" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>网站有没有 CDN 加速?</h3>
+<p>目前没有 CDN 加速集成，但是你依旧可以通过我们的子域名对接到其他 CDN，我们之后会添加 CDN 的自动集成</p>
 <h3>
 <a id="user-content-如何支持不带子域名的自定义域名-apex-domain" class="anchor" href="#%E5%A6%82%E4%BD%95%E6%94%AF%E6%8C%81%E4%B8%8D%E5%B8%A6%E5%AD%90%E5%9F%9F%E5%90%8D%E7%9A%84%E8%87%AA%E5%AE%9A%E4%B9%89%E5%9F%9F%E5%90%8D-apex-domain" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>如何支持不带子域名的自定义域名 (Apex Domain)?</h3>
 <p>目前没有提供这方面的功能，但是可以<a href="mailto:contact@swiftcarrot.com">联系我们</a>帮助添加</p>
 <h3>
-<a id="user-content-菜头云和-github-pages-有什么区别" class="anchor" href="#%E8%8F%9C%E5%A4%B4%E4%BA%91%E5%92%8C-github-pages-%E6%9C%89%E4%BB%80%E4%B9%88%E5%8C%BA%E5%88%AB" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>菜头云和 GitHub Pages 有什么区别</h3>
+<a id="user-content-菜头云和-github-pages-有什么区别" class="anchor" href="#%E8%8F%9C%E5%A4%B4%E4%BA%91%E5%92%8C-github-pages-%E6%9C%89%E4%BB%80%E4%B9%88%E5%8C%BA%E5%88%AB" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>菜头云和 GitHub Pages 有什么区别?</h3>
 <ul>
 <li>菜头云支持多次部署多次预览的功能, 并不需要你将文件上传到 git 目录或者某个分支</li>
 <li>Github Pages 免费用户不能使用私有项目部署， 菜头云甚至不要求有一个 git 项目，只需要有一个目录就能部署</li>
