--- a/public/index.html
+++ b/public/index.html
@@ -13,12 +13,15 @@
 <main class="markdown-body">
 <h1>
 <a id="user-content-菜头云" class="anchor" href="#%E8%8F%9C%E5%A4%B4%E4%BA%91" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>菜头云</h1>
+<p><a href="https://www.bilibili.com/video/BV1tV411v7Gp" rel="nofollow"><img align="right" height="200" src="public/video.png" style="max-width:100%;">
+</a></p>
 <p>菜头云 (<a href="https://caitouyun.com" rel="nofollow">https://caitouyun.com</a>) 是一个简单的帮助开发者快速迭代和部署前端静态网站的服务</p>
 <ul>
 <li>一个命令上线网站</li>
 <li>多版本线上预览, 支持 git 集成</li>
 <li>自定义域名和自动配置 HTTPS 证书</li>
 <li>中国大陆和海外两个节点同时部署</li>
+<li><a href="https://www.bilibili.com/video/BV1tV411v7Gp" rel="nofollow">点击播放介绍视频</a></li>
 </ul>
 <h2>
 <a id="user-content-目录" class="anchor" href="#%E7%9B%AE%E5%BD%95" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>目录</h2>
