--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
 <main class="markdown-body">
 <h1>
 <a id="user-content-菜头云" class="anchor" href="#%E8%8F%9C%E5%A4%B4%E4%BA%91" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>菜头云</h1>
-<p><a href="https://www.bilibili.com/video/BV1tV411v7Gp" rel="nofollow"><img align="right" height="200" src="public/video.png" style="max-width:100%;">
+<p><a href="https://www.bilibili.com/video/BV1tV411v7Gp" rel="nofollow"><img align="right" height="200" src="assets/video.png" style="max-width:100%;">
 </a></p>
 <p>菜头云 (<a href="https://caitouyun.com" rel="nofollow">https://caitouyun.com</a>) 是一个简单的帮助开发者快速迭代和部署前端静态网站的服务</p>
 <ul>
@@ -218,7 +218,7 @@
 <p>我们推荐使用官方的 <a href="https://github.com/caitouyun/action">菜头云 Github Action</a>，首先需要在项目中添加 <code>CAITOU_TOKEN</code> 环境变量，可以在本地命令行登录之后运行</p>
 <div class="highlight highlight-source-shell"><pre>caitou token</pre></div>
 <p>将终端输出的 token 作为 <code>CAITOU_TOKEN</code> 变量复制到 GitHub 项目中</p>
-<p><a href="public/github-caitou-token.png" target="_blank" rel="noopener noreferrer"><img src="public/github-caitou-token.png" alt="" style="max-width:100%;"></a></p>
+<p><a href="assets/github-caitou-token.png" target="_blank" rel="noopener noreferrer"><img src="assets/github-caitou-token.png" alt="" style="max-width:100%;"></a></p>
 <p>创建目录 <code>.github/workflows</code> 并添加一个 <code>caitouyun.yaml</code> 文件</p>
 <div class="highlight highlight-source-yaml"><pre><span class="pl-ent">name</span>: <span class="pl-s">caitouyun</span>
 <span class="pl-ent">on</span>:
