--- a/public/index.html
+++ b/public/index.html
@@ -257,6 +257,9 @@
 <a id="user-content-如何支持不带子域名的自定义域名-apex-domain" class="anchor" href="#%E5%A6%82%E4%BD%95%E6%94%AF%E6%8C%81%E4%B8%8D%E5%B8%A6%E5%AD%90%E5%9F%9F%E5%90%8D%E7%9A%84%E8%87%AA%E5%AE%9A%E4%B9%89%E5%9F%9F%E5%90%8D-apex-domain" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>如何支持不带子域名的自定义域名 (Apex Domain)?</h3>
 <p>目前没有提供这方面的功能，但是可以<a href="mailto:contact@swiftcarrot.com">联系我们</a>帮助添加</p>
 <h3>
+<a id="user-content-如何绑定自定义域名到预览链接" class="anchor" href="#%E5%A6%82%E4%BD%95%E7%BB%91%E5%AE%9A%E8%87%AA%E5%AE%9A%E4%B9%89%E5%9F%9F%E5%90%8D%E5%88%B0%E9%A2%84%E8%A7%88%E9%93%BE%E6%8E%A5" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>如何绑定自定义域名到预览链接?</h3>
+<p>目前没有提供这方面的功能，但是可以<a href="mailto:contact@swiftcarrot.com">联系我们</a>合作添加</p>
+<h3>
 <a id="user-content-菜头云和-github-pages-有什么区别" class="anchor" href="#%E8%8F%9C%E5%A4%B4%E4%BA%91%E5%92%8C-github-pages-%E6%9C%89%E4%BB%80%E4%B9%88%E5%8C%BA%E5%88%AB" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>菜头云和 GitHub Pages 有什么区别?</h3>
 <ul>
 <li>菜头云支持多次部署多次预览的功能, 并不需要你将文件上传到 git 目录或者某个分支</li>
