--- a/public/index.html
+++ b/public/index.html
@@ -199,7 +199,7 @@
 <div class="highlight highlight-source-yaml"><pre><span class="pl-ent">rewrites</span>:
   - <span class="pl-ent">source</span>: <span class="pl-s">/*</span>
     <span class="pl-ent">destination</span>: <span class="pl-s">/index.html</span></pre></div>
-<p>更多详细的 <code>rewrites</code> 文档正在补充中...</p>
+<p>更多详细的 <code>rewrites</code> 文档请查看<a href="https://github.com/caitouyun/docs/blob/master/docs/redirects-rewrites.md">Redirects Rewrites</a></p>
 <h3>
 <a id="user-content-集成环境" class="anchor" href="#%E9%9B%86%E6%88%90%E7%8E%AF%E5%A2%83" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>集成环境</h3>
 <p>将菜头云集成到现有的 git 集成部署环境中也非常容易，使用 <code>caitou deploy --git</code> 会自动读取本地或者集成环境中的 git 信息来生成对应的部署链接</p>
