remove img align

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
 <main class="markdown-body">
 <h1>
 <a id="user-content-菜头云" class="anchor" href="#%E8%8F%9C%E5%A4%B4%E4%BA%91" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>菜头云</h1>
-<p><a href="https://www.bilibili.com/video/BV1tV411v7Gp" rel="nofollow"><img align="right" height="200" src="assets/video.png" style="max-width:100%;">
+<p><a href="https://www.bilibili.com/video/BV1tV411v7Gp" rel="nofollow"><img src="assets/video.png" style="max-width:100%;">
 </a></p>
 <p>菜头云 (<a href="https://caitouyun.com" rel="nofollow">https://caitouyun.com</a>) 是一个简单的帮助开发者快速迭代和部署前端静态网站的服务</p>
 <ul>
